--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/Main.js",
   "scripts": {
     "lint": "eslint \"src/**/*.js\" \"test/**/*.js\" \"examples/**/*.js\"",
-    "doc": "jsdoc src/Core/View.js src/Core/Prefab/GlobeView.js src/Core/Layer/Layer.js src/Renderer/ColorLayersOrdering.js src/Renderer/ThreeExtended/GlobeControls.js src/Core/Geographic/Coordinates.js src/Parser/GpxParser.js src/Core/MainLoop.js src/Provider/URLBuilder.js src/Renderer/ThreeExtended/Feature2Mesh.js src/Parser/GeoJsonParser.js src/Core/Scheduler/Scheduler.js -t node_modules/docdash --readme JSDOC.md -c jsdoc-config.json",
+    "doc": "jsdoc src/Core/View.js src/Core/Prefab/GlobeView.js src/Core/Layer/Layer.js src/Renderer/ColorLayersOrdering.js src/Renderer/ThreeExtended/GlobeControls.js src/Core/Geographic/Coordinates.js src/Parser/GpxParser.js src/Core/MainLoop.js src/Provider/URLBuilder.js src/Renderer/ThreeExtended/Feature2Mesh.js src/Parser/GeoJsonParser.js src/Core/Scheduler/Scheduler.js src/Parser/VectorTileParser.js src/Provider/VectorTileHelper.js -t node_modules/docdash --readme JSDOC.md -c jsdoc-config.json",
     "doclint": "npm run doc -- -t templates/silent",
     "test": "npm run lint -- --max-warnings=0 && npm run build && npm run test-examples && npm run test-unit",
     "test-unit": "cross-env BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-core/register test/*unit_test.js",
@@ -32,6 +32,7 @@
   },
   "homepage": "https://itowns.github.io/",
   "dependencies": {
+    "@mapbox/vector-tile": "^1.3.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.20.0",
     "earcut": "^2.1.1",
@@ -39,6 +40,7 @@
     "js-priority-queue": "^0.1.5",
     "jszip": "^3.1.3",
     "monotone-convex-hull-2d": "^1.0.1",
+    "pbf": "^3.1.0",
     "text-encoding-utf-8": "^1.0.1",
     "togeojson": "^0.16.0",
     "url-polyfill": "^1.0.8",
